@@ -1,3 +1,8 @@
+2006-01-17 Vincent Jardin <vincent.jardin@6wind.com>
+
+	* md5.c: Don't forget to keep const.
+	* regex.c: Cleanup code and remove warnings.
+
 2006-01-17 Paul Jakma <paul.jakma@sun.com>
 
 	* md5.{c,h}: (md5_loop) Is better off taking a void * and doing
